# TimeTracker

./: .gitignore  README.md  Tracker.bat  pyproject.toml
app/: tracker.py
src/timetracker/: __init__.py
